@@ -17,6 +17,9 @@
 	* Fix displaying the protocol upload speed
 	* Fix #990, showing 0 as a limit when it means unlimited in the statusbar
 
+==== Console ====
+	* Fix displaying non-ascii strings
+	
 === Deluge 1.2.0_rc2 (25 October 2009) ===
 ==== GtkUI ====
 	* Fix path errors when adding torrents externally in Windows
